--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		</script>
 		<script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+		<link href="//cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+
 		<script src="js/config.js"></script>
 		<script src="js/main.min.js"></script>
 	</head>
@@ -52,6 +54,15 @@
 					</div>
 						<div id="navbarMenu" class="navbar-menu">
 							<div class="navbar-end">
+								<span class="navbar-item">
+									<a href="http://athxnode.io/" class="button is-light">
+										<span class="icon">
+											<i class="fa fa-server"></i>
+										</span>
+										
+										<span>Nodes</span>
+									</a>
+								</span>
 								<span class="navbar-item">
 									<a href="http://explorer.athx.org" class="button is-light">
 										<span class="icon">
@@ -88,8 +99,8 @@
 		</div> 
 
 		<!-- Hero content: will be in the middle -->
-		<div class="hero-body">
-			<table id="nodeTable" class="table table-striped table-bordered" style="width: 100%">
+		<div class="container">
+			<table id="nodeTable" class="table table-striped table-bordered" style="width: 100%" align="center">
 				<thead>
 					<tr>
 						<th>Hostname</th>
