updated mining icon

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<span class="navbar-item">
 									<a href="http://mining.athx.org" class="button is-light">
 										<span class="icon">
-											<i class="fa fa-server"></i>
+											<i class="fa fa-gem"></i>
 										</span>
 										
 										<span>Mining</span>
